chore: try fix ci

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,9 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      OPENCV_VERSION: 4.11.0
+      OPENCV_VERSION: 4.12.0
+      CC: gcc-14
+      CXX: g++-14
 
     steps:
       - name: Checkout
