feat: add timer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ cmake_policy(SET CMP0077 NEW)
 cmake_policy(SET CMP0091 NEW)
 
 project(tlct
-        VERSION 1.7.0
+        VERSION 1.7.1
         DESCRIPTION "The official implementation of the Tsinghua Lenslet Conversion Tool"
         LANGUAGES CXX
 )
 
-set(TLCT_VERSION_BETA_SUFFIX "")
+set(TLCT_VERSION_BETA_SUFFIX "alpha.0")
 if (NOT TLCT_VERSION_BETA_SUFFIX)
     set(TLCT_VERSION ${PROJECT_VERSION})
 else ()
